// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render with onClick 1`] = `
<ul
  className="a b c d e f g h i j k l m n o p q r s t u v w x y z"
  role="menu"
>
  <li
    className="ab b ac ae af ag ah ai aj ak al am an ao ap"
    role="menuitem"
  >
    <a
      className="cf-link"
      href="#!"
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      role="button"
    >
      onClick handler
    </a>
  </li>
</ul>
`;

exports[`should render with onClick 2`] = `
"
@-webkit-keyframes k1 {
  0% {
    display: none;
    opacity: 0
  }

  1% {
    display: block;
    opacity: 0;
    top: 80%
  }

  100% {
    display: none;
    opacity: 1;
    top: 102%
  }
}

@-moz-keyframes k1 {
  0% {
    display: none;
    opacity: 0
  }

  1% {
    display: block;
    opacity: 0;
    top: 80%
  }

  100% {
    display: none;
    opacity: 1;
    top: 102%
  }
}

@keyframes k1 {
  0% {
    display: none;
    opacity: 0
  }

  1% {
    display: block;
    opacity: 0;
    top: 80%
  }

  100% {
    display: none;
    opacity: 1;
    top: 102%
  }
}

.a {
  position: absolute
}

.b {
  z-index: 1
}

.c {
  min-width: 10.66667rem
}

.d {
  margin: 0.5em 0 0
}

.e {
  padding: 0.33333rem 0
}

.f {
  list-style: none
}

.g {
  background: #fff
}

.h {
  border: 1px solid #dedede
}

.i {
  border-radius: 2px
}

.j {
  box-shadow: 0 3px 10px rgba(0, 0, 0, 0.2)
}

.k {
  left: initial
}

.l {
  right: initial
}

.m {
  text-align: initial
}

.n {
  animation-name: k1
}

.o {
  animation-duration: 150ms;
  -webkit-animation-duration: 150ms
}

.p {
  animation-timing-function: ease-out;
  -webkit-animation-timing-function: ease-out
}

.q::before {
  content: ''
}

.r::before {
  display: block
}

.s::before {
  position: absolute
}

.t::before {
  bottom: 100%
}

.u::before {
  border: solid transparent
}

.v::before {
  border-width: 10px
}

.w::before {
  border-top-width: 0px
}

.x::before {
  border-bottom-color: #fff
}

.y::before {
  left: initial
}

.z::before {
  right: initial
}

.ab {
  position: relative
}

.ac:first-child {
  border-top-width: 0px
}

.ae > a {
  display: block
}

.af > a {
  padding: 0.2rem 1.06667rem
}

.ag > a {
  cursor: pointer
}

.ah > a {
  white-space: nowrap
}

.ai > a:hover {
  color: #fff
}

.aj > a:hover {
  background: #2F7BBF
}

.ak > a:focus {
  color: #fff
}

.al > a:focus {
  background: #76C4E2
}

.am > a:focus {
  outline: 5px auto -webkit-focus-ring-color
}

.an > a:focus {
  outline-offset: -1px
}

.ao > a:active {
  color: #fff
}

.ap > a:active {
  background: #408BC9
}
"
`;

exports[`should render with to 1`] = `
<ul
  className="a b c d e f g h i j k l m n o p q r s t u v w x y z"
  role="menu"
>
  <li
    className="ab b ac ae af ag ah ai aj ak al am an ao ap"
    role="menuitem"
  >
    <a
      className="cf-link"
      href="/foo"
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
    >
      Route to /foo
    </a>
  </li>
</ul>
`;

exports[`should render with to 2`] = `
"
@-webkit-keyframes k1 {
  0% {
    display: none;
    opacity: 0
  }

  1% {
    display: block;
    opacity: 0;
    top: 80%
  }

  100% {
    display: none;
    opacity: 1;
    top: 102%
  }
}

@-moz-keyframes k1 {
  0% {
    display: none;
    opacity: 0
  }

  1% {
    display: block;
    opacity: 0;
    top: 80%
  }

  100% {
    display: none;
    opacity: 1;
    top: 102%
  }
}

@keyframes k1 {
  0% {
    display: none;
    opacity: 0
  }

  1% {
    display: block;
    opacity: 0;
    top: 80%
  }

  100% {
    display: none;
    opacity: 1;
    top: 102%
  }
}

.a {
  position: absolute
}

.b {
  z-index: 1
}

.c {
  min-width: 10.66667rem
}

.d {
  margin: 0.5em 0 0
}

.e {
  padding: 0.33333rem 0
}

.f {
  list-style: none
}

.g {
  background: #fff
}

.h {
  border: 1px solid #dedede
}

.i {
  border-radius: 2px
}

.j {
  box-shadow: 0 3px 10px rgba(0, 0, 0, 0.2)
}

.k {
  left: initial
}

.l {
  right: initial
}

.m {
  text-align: initial
}

.n {
  animation-name: k1
}

.o {
  animation-duration: 150ms;
  -webkit-animation-duration: 150ms
}

.p {
  animation-timing-function: ease-out;
  -webkit-animation-timing-function: ease-out
}

.q::before {
  content: ''
}

.r::before {
  display: block
}

.s::before {
  position: absolute
}

.t::before {
  bottom: 100%
}

.u::before {
  border: solid transparent
}

.v::before {
  border-width: 10px
}

.w::before {
  border-top-width: 0px
}

.x::before {
  border-bottom-color: #fff
}

.y::before {
  left: initial
}

.z::before {
  right: initial
}

.ab {
  position: relative
}

.ac:first-child {
  border-top-width: 0px
}

.ae > a {
  display: block
}

.af > a {
  padding: 0.2rem 1.06667rem
}

.ag > a {
  cursor: pointer
}

.ah > a {
  white-space: nowrap
}

.ai > a:hover {
  color: #fff
}

.aj > a:hover {
  background: #2F7BBF
}

.ak > a:focus {
  color: #fff
}

.al > a:focus {
  background: #76C4E2
}

.am > a:focus {
  outline: 5px auto -webkit-focus-ring-color
}

.an > a:focus {
  outline-offset: -1px
}

.ao > a:active {
  color: #fff
}

.ap > a:active {
  background: #408BC9
}
"
`;
